fix drop down overflow

--- a/src/client/components/dropdown/dropdown.scss
+++ b/src/client/components/dropdown/dropdown.scss
@@ -44,6 +44,7 @@
   }
 
   .dropdown-item {
+    @include ellipsis;
     padding: 0 4px;
     cursor: pointer;
 
